# Secret-Genie

./: .gitignore  README.md  build.bat  build.sh  fake.py  install.ps1  install.sh  pyproject.toml  requirements.txt  sample.py  secretgenie-cli.bat  secretgenie-cli.ps1  secretgenie-cli.sh
packaging/: genie-hsbc.spec  genie.spec  runtime_hook.py
src/: main.py
src/genie_cli/: __init__.py  __main__.py  cli.py  console.py  hooks_installer.py
src/genie_cli/webapp/: __init__.py  layout.py  pages.py  scan_runner.py  server.py  theme.py
src/hooks/: pre_push.py
src/hooks/scanner/: __init__.py  scan_config.py
src/hooks/scanner/templates/: report.html
